--- a/audiotestHTML/requirements.txt
+++ b/audiotestHTML/requirements.txt
@@ -1,3 +1,22 @@
-﻿Flask==2.3.2
-SpeechRecognition==3.8.1
+blinker==1.8.2
+certifi==2024.7.4
+charset-normalizer==3.3.2
+click==8.1.7
+Flask==2.3.2
+gTTS==2.5.3
+idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
 mysql-connector-python==8.0.33
+packaging==24.1
+pipdeptree==2.23.1
+protobuf==3.20.3
+#PyAudio==0.2.14
+pyttsx3==2.90
+requests==2.32.3
+SpeechRecognition==3.8.1
+urllib3==2.2.2
+Werkzeug==3.0.3
+gtts==2.2.3
+
